--- a/style.css
+++ b/style.css
@@ -119,6 +119,7 @@ input[type="file"] {
 }
 
 button#save {
+  margin-top: 1rem;
   padding: 0.5rem 1rem;
   border: none;
   background-color: #2196f3;
